# python-package-test

./: CHANGELOG.md  CONTRIBUTING.md  README.md  coverage.lcov  pyproject.toml
.github/workflows/: ci-cd.yml  commit_lint.yml  test.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wopee/: __init__.py
tests/: test_wopee.py
