[tool.poetry]
name = "wopee"
version = "0.0.1"
description = "wopee"
authors = ["Ondrej Winter"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^6.0"
opencv-python = "^4.6.0.66"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
Sphinx = "^5.3.0"
myst-nb = {version = "^0.17.1", python = "^3.9"}
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "master"                           # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
